@@ -82,7 +82,7 @@
 
           </table>
 
-          <h2>Werkvelden</h2>
+          <h2>Thema's</h2>
             <p>
               Hoorzittingen, adviezen en studies zijn aan werkvelden
               gekoppeld. U kunt hieronder aangeven in welke werkvelden u
