@@ -112,7 +112,7 @@
        <tr tal:define="theme context/getThemeName"
             tal:condition="theme">
          <td>
-           Werkveld
+           Thema
          </td>
          <td tal:content="theme" />
        </tr>
